...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        realm = try? Realm()
        
        emailTextField.accessibilityIdentifier = "volvoIdTextField"
        passwordTextField.accessibilityIdentifier = "volvoPwdTextField"
        
        forgotPassword.setActionBlock {
            [weak self] in
            self?.pushViewController(FTUEPhoneNumberViewController(type: .resetPassword), animated: true)
        }

...
