...
        
        if let leftVC = self.slideMenuController?.leftViewController as? LeftViewController {
            leftVC.mainNavigationViewController = uiNavigationController
            self.slideMenuController?.leftViewController = leftVC
            leftVC.changeMainViewController(uiNavigationController: uiNavigationController, title: uiNavigationController.title, animated: true)
        } else {
            let leftViewController = LeftViewController()
            leftViewController.view.accessibilityIdentifier = "leftViewController"
            leftViewController.mainNavigationViewController = uiNavigationController
            
            let menuController = VLSlideMenuController(mainViewController: uiNavigationController, leftMenuViewController: leftViewController)
            menuController.automaticallyAdjustsScrollViewInsets = true
            menuController.view.accessibilityIdentifier = "slideMenuController"
...
