...
        if #available(iOS 11.0, *) {
            textfield.textContentType = .username
        }
        return textfield
    }()
    
    let volvoPwdTextField = VLVerticalTextField(title: .localized(.viewEditTextTitlePasswordNew), placeholder: "••••••••", kern: 2.0)
    let volvoPwdConfirmTextField = VLVerticalTextField(title: .localized(.viewEditTextTitlePasswordConfirm), placeholder: "••••••••", kern: 2.0)
    
    var signupInProgress = false
    var realm : Realm?
    
    init() {
        super.init(screen: .signupPassword)
...
