...

import Foundation
import UIKit

class FTUESignupName: FTUEChildViewController, FTUEProtocol {
    
    let welcomeLabel: UILabel = {
        let textView = UILabel(frame: .zero)
        textView.text = .WelcomeSignup
        textView.font = .volvoSansLight(size: 18)
        textView.textColor = .luxeDarkGray()
        textView.backgroundColor = .clear
        textView.numberOfLines = 0
...
