...
import Foundation
import UIKit

class PhoneVerificationViewController: StepViewController, UITextFieldDelegate {
    
    let codeLength = 4
    let codeTextField = VLVerticalTextField(title: "", placeholder: "0000", kern: 4.0)
    
    private let confirmationLabel = Label.dark(with: Unlocalized.letsVerifyPhoneNumber)
    
    // MARK: Lifecycle
    
    override init(step: Step?) {
...
