...
        textView.text = .localized(.viewEditTextPhoneDescription)
        textView.backgroundColor = .clear
        textView.numberOfLines = 0
        return textView
    }()
    
    let tosCheckbox = VLCheckbox(title: nil)
    
    let tosLabel: UILabel = {
        let textView = UILabel(frame: .zero)
        textView.font = .volvoSansProRegular(size: 12)
        textView.textColor = .luxeDarkGray()
        textView.backgroundColor = .clear
...
